discussion/kv_engine/178758/178758_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [2/n] Pause / Resume Bucket: BucketManager & ep-engine

Implement pause & resume commands in BucketManager, and for
ep-engine.

ep-engine notifies the KVStoreIface of pause / resume(), but KVStore
support is not yet implemented - see next patch in sequence.

Change-Id: I53f491a21f5a1e701bafd16ea7b3dd54ab5f786c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-08-31 09:56:44.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 10:45:26.000000000
Message: 
Patch Set 18: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19859/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:837:23: error: member reference type "Bucket *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
            if (bucket.state != Bucket::State::Ready) {
                      ^
                      ->

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19859/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19859/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48793/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/buckets.cc(837): error C2228: left of ".state" must have class/struct/union ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48793/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41019/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41019/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41019/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30192/ : FAILURE

Compile error at [2022-08-31T10:44:59.773Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30192/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22164/ : FAILURE

Compile error at [2022-08-31T10:37:54.134Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22164/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21102/ : FAILURE

Compile error at [2022-08-31T10:37:18.311Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21102/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9554/ : FAILURE

Compile error at [2022-08-31T10:37:59.178Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9554/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21811/ : FAILURE

Compile error at [2022-08-31T10:38:35.981Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9653/ : FAILURE

Compile error at [2022-08-31T10:14:18.935Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9653/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22900/ : FAILURE

Compile error at [2022-08-31T10:38:48.027Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22900/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19079/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-08-31 13:41:00.000000000
Message: 
Patch Set 18:

(5 comments)
File Comment: /PATCHSET_LEVEL -> Looks good (but there is a compile failure due to the refactor).

_personally_ I think I would have moved all of your ep-engine changes into the next patch in the stack (since you already have one dedicated for ep-engine) and leave this one to just put it in engine.h and ewb engine.
Line:204, daemon/protocol/mcbp/bucket_management_command_context.cc -> nit: we probably don't need a line break there ;)

Line:236, daemon/protocol/mcbp/bucket_management_command_context.cc -> ditto

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-01 08:46:50.000000000
Message: 
Patch Set 18:

(1 comment)
Line:204, daemon/protocol/mcbp/bucket_management_command_context.cc -> Blame clang-format ;)

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-06 15:11:10.000000000
MISMATCHED INLINE COMMENT
Line:204, daemon/protocol/mcbp/bucket_management_command_context.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-09-01 15:14:44.000000000
MISMATCHED INLINE COMMENT
Line:204, daemon/protocol/mcbp/bucket_management_command_context.cc -> I"m pretty sure if you remove the linebreak clang-format won't insert it...  clang-format does an incredible poor job when it comes to cleaning up strings (it happily split a line, but it won't squash it with the next line etc)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-06 15:11:10.000000000
MISMATCHED INLINE COMMENT
Line:236, daemon/protocol/mcbp/bucket_management_command_context.cc -> Done
----------------------------------------------------------------------------------------------------------------------
